// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html._10hafptz,html._10hafptz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="fvj5u10 xwr9ww18 xwr9ww1b">
+        <div class="wrk15d0 _10hafpt7i _10hafpt6e _10hafpt9q _10hafpt8m _10hafpt5e xwr9ww18 xwr9ww1b _10hafpt32 _10hafpt35">
+          <span class="wrk15d0 _10hafpt4y xwr9ww0 xwr9ww1 xwr9ww21 _10l7dzo4 xwr9wwd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .wrk15d0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] .wrk15d0 {
  outline: none;
}
.wrk15d1 {
  display: block;
}
.wrk15d2 {
  line-height: 1;
}
.wrk15d3 {
  list-style: none;
}
.wrk15d4 {
  quotes: none;
}
.wrk15d4:after,
.wrk15d4:before {
  content: "";
}
.wrk15d5 {
  border-collapse: collapse;
  border-spacing: 0;
}
.wrk15d6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}
.wrk15d7 {
  background-color: transparent;
}
.wrk15d9 {
  color: inherit;
}
.wrk15da:disabled {
  opacity: 1;
}
.wrk15da::-ms-expand {
  display: none;
}
.wrk15dc[type="number"] {
  -moz-appearance: textfield;
}
.wrk15dc[type="number"]::-webkit-inner-spin-button,
.wrk15dc[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.wrk15dc::-ms-clear {
  display: none;
}
.wrk15dc::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.wrk15df {
  color: inherit;
  text-decoration: none;
}
._10hafpt0 {
  overflow: hidden;
}
._10hafpt1 {
  overflow: scroll;
}
._10hafpt2 {
  overflow: visible;
}
._10hafpt3 {
  overflow: auto;
}
._10hafpt4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}
._10hafpt5 {
  outline: none;
}
._10hafpt6 {
  opacity: 0;
}
._10hafpt7 {
  z-index: 0;
}
._10hafpt8 {
  z-index: 1;
}
._10hafpt9 {
  z-index: 2;
}
._10hafpta {
  z-index: 90;
}
._10hafptb {
  z-index: 100;
}
._10hafptc {
  z-index: 200;
}
._10hafptd {
  z-index: 290;
}
._10hafpte {
  z-index: 300;
}
._10hafptf {
  z-index: 400;
}
._10hafptg {
  cursor: default;
}
._10hafpth {
  cursor: pointer;
}
._10hafpti {
  pointer-events: none;
}
._10hafptj {
  top: 0;
}
._10hafptk {
  bottom: 0;
}
._10hafptl {
  left: 0;
}
._10hafptm {
  right: 0;
}
._10hafptn {
  height: 100%;
}
._10hafpto {
  height: var(--l8vrn9);
}
._10hafptp {
  width: 100%;
}
._10hafptq {
  width: var(--l8vrn9);
}
._10hafptr {
  min-width: 0;
}
._10hafpts {
  max-width: var(--l8vrn11);
}
._10hafptt {
  max-width: var(--l8vrn12);
}
._10hafptu {
  max-width: var(--l8vrn13);
}
._10hafptv {
  max-width: var(--l8vrn14);
}
._10hafptw {
  transition: var(--l8vrn5i);
}
._10hafptx {
  transition: var(--l8vrn5j);
}
._10hafpty:active {
  transform: var(--l8vrn5k);
}
html._10hafptz ._10hafpt11,
html:not(._10hafptz) ._10hafpt10 {
  background: var(--l8vrn1t);
}
html._10hafptz ._10hafpt13,
html:not(._10hafptz) ._10hafpt12 {
  background: var(--l8vrn1u);
}
html._10hafptz ._10hafpt15,
html:not(._10hafptz) ._10hafpt14 {
  background: var(--l8vrn1v);
}
html._10hafptz ._10hafpt17,
html:not(._10hafptz) ._10hafpt16 {
  background: var(--l8vrn1w);
}
html._10hafptz ._10hafpt19,
html:not(._10hafptz) ._10hafpt18 {
  background: var(--l8vrn1x);
}
html._10hafptz ._10hafpt1b,
html:not(._10hafptz) ._10hafpt1a {
  background: var(--l8vrn1y);
}
html._10hafptz ._10hafpt1d,
html:not(._10hafptz) ._10hafpt1c {
  background: var(--l8vrn1z);
}
html._10hafptz ._10hafpt1f,
html:not(._10hafptz) ._10hafpt1e {
  background: var(--l8vrn20);
}
html._10hafptz ._10hafpt1h,
html:not(._10hafptz) ._10hafpt1g {
  background: var(--l8vrn21);
}
html._10hafptz ._10hafpt1j,
html:not(._10hafptz) ._10hafpt1i {
  background: var(--l8vrn22);
}
html._10hafptz ._10hafpt1l,
html:not(._10hafptz) ._10hafpt1k {
  background: var(--l8vrn23);
}
html._10hafptz ._10hafpt1n,
html:not(._10hafptz) ._10hafpt1m {
  background: var(--l8vrn24);
}
html._10hafptz ._10hafpt1p,
html:not(._10hafptz) ._10hafpt1o {
  background: var(--l8vrn25);
}
html._10hafptz ._10hafpt1r,
html:not(._10hafptz) ._10hafpt1q {
  background: var(--l8vrn26);
}
html._10hafptz ._10hafpt1t,
html:not(._10hafptz) ._10hafpt1s {
  background: var(--l8vrn27);
}
html._10hafptz ._10hafpt1v,
html:not(._10hafptz) ._10hafpt1u {
  background: var(--l8vrn28);
}
html._10hafptz ._10hafpt1x,
html:not(._10hafptz) ._10hafpt1w {
  background: var(--l8vrn29);
}
html._10hafptz ._10hafpt1z,
html:not(._10hafptz) ._10hafpt1y {
  background: var(--l8vrn2a);
}
html._10hafptz ._10hafpt21,
html:not(._10hafptz) ._10hafpt20 {
  background: var(--l8vrn2b);
}
html._10hafptz ._10hafpt23,
html:not(._10hafptz) ._10hafpt22 {
  background: var(--l8vrn2c);
}
html._10hafptz ._10hafpt25,
html:not(._10hafptz) ._10hafpt24 {
  background: var(--l8vrn2d);
}
html._10hafptz ._10hafpt27,
html:not(._10hafptz) ._10hafpt26 {
  background: var(--l8vrn2e);
}
html._10hafptz ._10hafpt29,
html:not(._10hafptz) ._10hafpt28 {
  background: var(--l8vrn2f);
}
html._10hafptz ._10hafpt2b,
html:not(._10hafptz) ._10hafpt2a {
  background: var(--l8vrn2g);
}
html._10hafptz ._10hafpt2d,
html:not(._10hafptz) ._10hafpt2c {
  background: var(--l8vrn2h);
}
html._10hafptz ._10hafpt2f,
html:not(._10hafptz) ._10hafpt2e {
  background: var(--l8vrn2i);
}
html._10hafptz ._10hafpt2h,
html:not(._10hafptz) ._10hafpt2g {
  background: var(--l8vrn2j);
}
html._10hafptz ._10hafpt2j,
html:not(._10hafptz) ._10hafpt2i {
  background: var(--l8vrn2k);
}
html._10hafptz ._10hafpt2l,
html:not(._10hafptz) ._10hafpt2k {
  background: var(--l8vrn2l);
}
html._10hafptz ._10hafpt2n,
html:not(._10hafptz) ._10hafpt2m {
  background: var(--l8vrn2m);
}
html._10hafptz ._10hafpt2p,
html:not(._10hafptz) ._10hafpt2o {
  background: var(--l8vrn2n);
}
html._10hafptz ._10hafpt2r,
html:not(._10hafptz) ._10hafpt2q {
  background: var(--l8vrn2o);
}
html._10hafptz ._10hafpt2t,
html:not(._10hafptz) ._10hafpt2s {
  background: var(--l8vrn2p);
}
html._10hafptz ._10hafpt2v,
html:not(._10hafptz) ._10hafpt2u {
  background: var(--l8vrn2q);
}
html._10hafptz ._10hafpt2x,
html:not(._10hafptz) ._10hafpt2w {
  background: var(--l8vrn2r);
}
html._10hafptz ._10hafpt2z,
html:not(._10hafptz) ._10hafpt2y {
  background: var(--l8vrn2s);
}
html._10hafptz ._10hafpt31,
html:not(._10hafptz) ._10hafpt30 {
  background: var(--l8vrn2t);
}
html._10hafptz ._10hafpt33,
html:not(._10hafptz) ._10hafpt32 {
  background: var(--l8vrn2u);
}
html._10hafptz ._10hafpt35,
html:not(._10hafptz) ._10hafpt34 {
  background: var(--l8vrn2v);
}
html._10hafptz ._10hafpt37,
html:not(._10hafptz) ._10hafpt36 {
  box-shadow: var(--l8vrn5l);
}
html._10hafptz ._10hafpt39,
html:not(._10hafptz) ._10hafpt38 {
  box-shadow: var(--l8vrn5m);
}
html._10hafptz ._10hafpt3b,
html:not(._10hafptz) ._10hafpt3a {
  box-shadow: var(--l8vrn5n);
}
html._10hafptz ._10hafpt3d,
html:not(._10hafptz) ._10hafpt3c {
  box-shadow: inset 0 0 0 var(--l8vrny) var(--l8vrnf);
}
html._10hafptz ._10hafpt3f,
html:not(._10hafptz) ._10hafpt3e {
  box-shadow: inset 0 0 0 var(--l8vrny) var(--l8vrng);
}
html._10hafptz ._10hafpt3h,
html:not(._10hafptz) ._10hafpt3g {
  box-shadow: inset 0 0 0 var(--l8vrnz) var(--l8vrnf);
}
html._10hafptz ._10hafpt3j,
html:not(._10hafptz) ._10hafpt3i {
  box-shadow: inset 0 0 0 var(--l8vrnz) var(--l8vrng);
}
html._10hafptz ._10hafpt3l,
html:not(._10hafptz) ._10hafpt3k {
  box-shadow: inset 0 0 0 var(--l8vrny) var(--l8vrnh);
}
html._10hafptz ._10hafpt3n,
html:not(._10hafptz) ._10hafpt3m {
  box-shadow: inset 0 0 0 var(--l8vrny) var(--l8vrni);
}
html._10hafptz ._10hafpt3p,
html:not(._10hafptz) ._10hafpt3o {
  box-shadow: inset 0 0 0 var(--l8vrny) var(--l8vrnj);
}
html._10hafptz ._10hafpt3r,
html:not(._10hafptz) ._10hafpt3q {
  box-shadow: inset 0 0 0 var(--l8vrnz) var(--l8vrnj);
}
html._10hafptz ._10hafpt3t,
html:not(._10hafptz) ._10hafpt3s {
  box-shadow: inset 0 0 0 var(--l8vrny) var(--l8vrnk);
}
html._10hafptz ._10hafpt3v,
html:not(._10hafptz) ._10hafpt3u {
  box-shadow: inset 0 0 0 var(--l8vrnz) var(--l8vrnk);
}
html._10hafptz ._10hafpt3x,
html:not(._10hafptz) ._10hafpt3w {
  box-shadow: inset 0 0 0 var(--l8vrny) var(--l8vrnl);
}
html._10hafptz ._10hafpt3z,
html:not(._10hafptz) ._10hafpt3y {
  box-shadow: inset 0 0 0 var(--l8vrny) var(--l8vrnn);
}
html._10hafptz ._10hafpt41,
html:not(._10hafptz) ._10hafpt40 {
  box-shadow: inset 0 0 0 var(--l8vrnz) var(--l8vrnn);
}
html._10hafptz ._10hafpt43,
html:not(._10hafptz) ._10hafpt42 {
  box-shadow: inset 0 0 0 var(--l8vrny) var(--l8vrno);
}
html._10hafptz ._10hafpt45,
html:not(._10hafptz) ._10hafpt44 {
  box-shadow: inset 0 0 0 var(--l8vrnz) var(--l8vrno);
}
html._10hafptz ._10hafpt47,
html:not(._10hafptz) ._10hafpt46 {
  box-shadow: inset 0 0 0 var(--l8vrny) var(--l8vrnp);
}
html._10hafptz ._10hafpt49,
html:not(._10hafptz) ._10hafpt48 {
  box-shadow: inset 0 0 0 var(--l8vrny) var(--l8vrnq);
}
html._10hafptz ._10hafpt4b,
html:not(._10hafptz) ._10hafpt4a {
  box-shadow: inset 0 0 0 var(--l8vrny) var(--l8vrnr);
}
html._10hafptz ._10hafpt4d,
html:not(._10hafptz) ._10hafpt4c {
  box-shadow: inset 0 0 0 var(--l8vrnz) var(--l8vrnr);
}
html._10hafptz ._10hafpt4f,
html:not(._10hafptz) ._10hafpt4e {
  box-shadow: inset 0 0 0 var(--l8vrny) var(--l8vrns);
}
html._10hafptz ._10hafpt4h,
html:not(._10hafptz) ._10hafpt4g {
  box-shadow: inset 0 0 0 var(--l8vrnz) var(--l8vrns);
}
html._10hafptz ._10hafpt4j,
html:not(._10hafptz) ._10hafpt4i {
  box-shadow: inset 0 0 0 var(--l8vrny) var(--l8vrnt);
}
html._10hafptz ._10hafpt4l,
html:not(._10hafptz) ._10hafpt4k {
  box-shadow: inset 0 0 0 var(--l8vrny) var(--l8vrnu);
}
html._10hafptz ._10hafpt4n,
html:not(._10hafptz) ._10hafpt4m {
  box-shadow: inset 0 0 0 var(--l8vrny) var(--l8vrnv);
}
html._10hafptz ._10hafpt4p,
html:not(._10hafptz) ._10hafpt4o {
  box-shadow: inset 0 0 0 var(--l8vrny) var(--l8vrnw);
}
html._10hafptz ._10hafpt4r,
html:not(._10hafptz) ._10hafpt4q {
  box-shadow: inset 0 0 0 var(--l8vrny) var(--l8vrnx);
}
html._10hafptz ._10hafpt4t,
html:not(._10hafptz) ._10hafpt4s {
  box-shadow: 0 0 0 var(--l8vrn10) var(--l8vrnm);
}
._10hafpt4u {
  display: none;
}
._10hafpt4y {
  display: block;
}
._10hafpt52 {
  display: inline;
}
._10hafpt56 {
  display: inline-block;
}
._10hafpt5a {
  display: flex;
}
._10hafpt5e {
  position: relative;
}
._10hafpt5i {
  position: absolute;
}
._10hafpt5m {
  position: fixed;
}
._10hafpt5q {
  border-radius: 0;
}
._10hafpt5u {
  border-radius: 9999px;
}
._10hafpt5y {
  border-radius: var(--l8vrnb);
}
._10hafpt62 {
  border-radius: var(--l8vrnc);
}
._10hafpt66 {
  border-radius: var(--l8vrnd);
}
._10hafpt6a {
  border-radius: var(--l8vrne);
}
._10hafpt6e {
  padding-top: var(--l8vrn0);
}
._10hafpt6i {
  padding-top: var(--l8vrn1);
}
._10hafpt6m {
  padding-top: var(--l8vrn2);
}
._10hafpt6q {
  padding-top: var(--l8vrn3);
}
._10hafpt6u {
  padding-top: var(--l8vrn4);
}
._10hafpt6y {
  padding-top: var(--l8vrn5);
}
._10hafpt72 {
  padding-top: var(--l8vrn6);
}
._10hafpt76 {
  padding-top: var(--l8vrn7);
}
._10hafpt7a {
  padding-top: var(--l8vrn8);
}
._10hafpt7e {
  padding-top: 0;
}
._10hafpt7i {
  padding-bottom: var(--l8vrn0);
}
._10hafpt7m {
  padding-bottom: var(--l8vrn1);
}
._10hafpt7q {
  padding-bottom: var(--l8vrn2);
}
._10hafpt7u {
  padding-bottom: var(--l8vrn3);
}
._10hafpt7y {
  padding-bottom: var(--l8vrn4);
}
._10hafpt82 {
  padding-bottom: var(--l8vrn5);
}
._10hafpt86 {
  padding-bottom: var(--l8vrn6);
}
._10hafpt8a {
  padding-bottom: var(--l8vrn7);
}
._10hafpt8e {
  padding-bottom: var(--l8vrn8);
}
._10hafpt8i {
  padding-bottom: 0;
}
._10hafpt8m {
  padding-right: var(--l8vrn0);
}
._10hafpt8q {
  padding-right: var(--l8vrn1);
}
._10hafpt8u {
  padding-right: var(--l8vrn2);
}
._10hafpt8y {
  padding-right: var(--l8vrn3);
}
._10hafpt92 {
  padding-right: var(--l8vrn4);
}
._10hafpt96 {
  padding-right: var(--l8vrn5);
}
._10hafpt9a {
  padding-right: var(--l8vrn6);
}
._10hafpt9e {
  padding-right: var(--l8vrn7);
}
._10hafpt9i {
  padding-right: var(--l8vrn8);
}
._10hafpt9m {
  padding-right: 0;
}
._10hafpt9q {
  padding-left: var(--l8vrn0);
}
._10hafpt9u {
  padding-left: var(--l8vrn1);
}
._10hafpt9y {
  padding-left: var(--l8vrn2);
}
._10hafpta2 {
  padding-left: var(--l8vrn3);
}
._10hafpta6 {
  padding-left: var(--l8vrn4);
}
._10hafptaa {
  padding-left: var(--l8vrn5);
}
._10hafptae {
  padding-left: var(--l8vrn6);
}
._10hafptai {
  padding-left: var(--l8vrn7);
}
._10hafptam {
  padding-left: var(--l8vrn8);
}
._10hafptaq {
  padding-left: 0;
}
._10hafptau {
  margin-top: var(--l8vrn0);
}
._10hafptay {
  margin-top: var(--l8vrn1);
}
._10hafptb2 {
  margin-top: var(--l8vrn2);
}
._10hafptb6 {
  margin-top: var(--l8vrn3);
}
._10hafptba {
  margin-top: var(--l8vrn4);
}
._10hafptbe {
  margin-top: var(--l8vrn5);
}
._10hafptbi {
  margin-top: var(--l8vrn6);
}
._10hafptbm {
  margin-top: var(--l8vrn7);
}
._10hafptbq {
  margin-top: var(--l8vrn8);
}
._10hafptbu {
  margin-top: 0;
}
._10hafptby {
  margin-bottom: var(--l8vrn0);
}
._10hafptc2 {
  margin-bottom: var(--l8vrn1);
}
._10hafptc6 {
  margin-bottom: var(--l8vrn2);
}
._10hafptca {
  margin-bottom: var(--l8vrn3);
}
._10hafptce {
  margin-bottom: var(--l8vrn4);
}
._10hafptci {
  margin-bottom: var(--l8vrn5);
}
._10hafptcm {
  margin-bottom: var(--l8vrn6);
}
._10hafptcq {
  margin-bottom: var(--l8vrn7);
}
._10hafptcu {
  margin-bottom: var(--l8vrn8);
}
._10hafptcy {
  margin-bottom: 0;
}
._10hafptd2 {
  margin-right: var(--l8vrn0);
}
._10hafptd6 {
  margin-right: var(--l8vrn1);
}
._10hafptda {
  margin-right: var(--l8vrn2);
}
._10hafptde {
  margin-right: var(--l8vrn3);
}
._10hafptdi {
  margin-right: var(--l8vrn4);
}
._10hafptdm {
  margin-right: var(--l8vrn5);
}
._10hafptdq {
  margin-right: var(--l8vrn6);
}
._10hafptdu {
  margin-right: var(--l8vrn7);
}
._10hafptdy {
  margin-right: var(--l8vrn8);
}
._10hafpte2 {
  margin-right: 0;
}
._10hafpte6 {
  margin-left: var(--l8vrn0);
}
._10hafptea {
  margin-left: var(--l8vrn1);
}
._10hafptee {
  margin-left: var(--l8vrn2);
}
._10hafptei {
  margin-left: var(--l8vrn3);
}
._10hafptem {
  margin-left: var(--l8vrn4);
}
._10hafpteq {
  margin-left: var(--l8vrn5);
}
._10hafpteu {
  margin-left: var(--l8vrn6);
}
._10hafptey {
  margin-left: var(--l8vrn7);
}
._10hafptf2 {
  margin-left: var(--l8vrn8);
}
._10hafptf6 {
  margin-left: 0;
}
._10hafptfa {
  align-items: flex-start;
}
._10hafptfe {
  align-items: center;
}
._10hafptfi {
  align-items: flex-end;
}
._10hafptfm {
  justify-content: flex-start;
}
._10hafptfq {
  justify-content: center;
}
._10hafptfu {
  justify-content: flex-end;
}
._10hafptfy {
  justify-content: space-between;
}
._10hafptg2 {
  flex-direction: row;
}
._10hafptg6 {
  flex-direction: row-reverse;
}
._10hafptga {
  flex-direction: column;
}
._10hafptge {
  flex-direction: column-reverse;
}
._10hafptgi {
  flex-wrap: wrap;
}
._10hafptgm {
  flex-wrap: nowrap;
}
._10hafptgq {
  flex-shrink: 0;
}
._10hafptgu {
  flex-grow: 0;
}
._10hafptgy {
  flex-grow: 1;
}
._10hafpth2 {
  text-align: left;
}
._10hafpth6 {
  text-align: center;
}
._10hafptha {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._10hafpt4v {
    display: none;
  }
  ._10hafpt4z {
    display: block;
  }
  ._10hafpt53 {
    display: inline;
  }
  ._10hafpt57 {
    display: inline-block;
  }
  ._10hafpt5b {
    display: flex;
  }
  ._10hafpt5f {
    position: relative;
  }
  ._10hafpt5j {
    position: absolute;
  }
  ._10hafpt5n {
    position: fixed;
  }
  ._10hafpt5r {
    border-radius: 0;
  }
  ._10hafpt5v {
    border-radius: 9999px;
  }
  ._10hafpt5z {
    border-radius: var(--l8vrnb);
  }
  ._10hafpt63 {
    border-radius: var(--l8vrnc);
  }
  ._10hafpt67 {
    border-radius: var(--l8vrnd);
  }
  ._10hafpt6b {
    border-radius: var(--l8vrne);
  }
  ._10hafpt6f {
    padding-top: var(--l8vrn0);
  }
  ._10hafpt6j {
    padding-top: var(--l8vrn1);
  }
  ._10hafpt6n {
    padding-top: var(--l8vrn2);
  }
  ._10hafpt6r {
    padding-top: var(--l8vrn3);
  }
  ._10hafpt6v {
    padding-top: var(--l8vrn4);
  }
  ._10hafpt6z {
    padding-top: var(--l8vrn5);
  }
  ._10hafpt73 {
    padding-top: var(--l8vrn6);
  }
  ._10hafpt77 {
    padding-top: var(--l8vrn7);
  }
  ._10hafpt7b {
    padding-top: var(--l8vrn8);
  }
  ._10hafpt7f {
    padding-top: 0;
  }
  ._10hafpt7j {
    padding-bottom: var(--l8vrn0);
  }
  ._10hafpt7n {
    padding-bottom: var(--l8vrn1);
  }
  ._10hafpt7r {
    padding-bottom: var(--l8vrn2);
  }
  ._10hafpt7v {
    padding-bottom: var(--l8vrn3);
  }
  ._10hafpt7z {
    padding-bottom: var(--l8vrn4);
  }
  ._10hafpt83 {
    padding-bottom: var(--l8vrn5);
  }
  ._10hafpt87 {
    padding-bottom: var(--l8vrn6);
  }
  ._10hafpt8b {
    padding-bottom: var(--l8vrn7);
  }
  ._10hafpt8f {
    padding-bottom: var(--l8vrn8);
  }
  ._10hafpt8j {
    padding-bottom: 0;
  }
  ._10hafpt8n {
    padding-right: var(--l8vrn0);
  }
  ._10hafpt8r {
    padding-right: var(--l8vrn1);
  }
  ._10hafpt8v {
    padding-right: var(--l8vrn2);
  }
  ._10hafpt8z {
    padding-right: var(--l8vrn3);
  }
  ._10hafpt93 {
    padding-right: var(--l8vrn4);
  }
  ._10hafpt97 {
    padding-right: var(--l8vrn5);
  }
  ._10hafpt9b {
    padding-right: var(--l8vrn6);
  }
  ._10hafpt9f {
    padding-right: var(--l8vrn7);
  }
  ._10hafpt9j {
    padding-right: var(--l8vrn8);
  }
  ._10hafpt9n {
    padding-right: 0;
  }
  ._10hafpt9r {
    padding-left: var(--l8vrn0);
  }
  ._10hafpt9v {
    padding-left: var(--l8vrn1);
  }
  ._10hafpt9z {
    padding-left: var(--l8vrn2);
  }
  ._10hafpta3 {
    padding-left: var(--l8vrn3);
  }
  ._10hafpta7 {
    padding-left: var(--l8vrn4);
  }
  ._10hafptab {
    padding-left: var(--l8vrn5);
  }
  ._10hafptaf {
    padding-left: var(--l8vrn6);
  }
  ._10hafptaj {
    padding-left: var(--l8vrn7);
  }
  ._10hafptan {
    padding-left: var(--l8vrn8);
  }
  ._10hafptar {
    padding-left: 0;
  }
  ._10hafptav {
    margin-top: var(--l8vrn0);
  }
  ._10hafptaz {
    margin-top: var(--l8vrn1);
  }
  ._10hafptb3 {
    margin-top: var(--l8vrn2);
  }
  ._10hafptb7 {
    margin-top: var(--l8vrn3);
  }
  ._10hafptbb {
    margin-top: var(--l8vrn4);
  }
  ._10hafptbf {
    margin-top: var(--l8vrn5);
  }
  ._10hafptbj {
    margin-top: var(--l8vrn6);
  }
  ._10hafptbn {
    margin-top: var(--l8vrn7);
  }
  ._10hafptbr {
    margin-top: var(--l8vrn8);
  }
  ._10hafptbv {
    margin-top: 0;
  }
  ._10hafptbz {
    margin-bottom: var(--l8vrn0);
  }
  ._10hafptc3 {
    margin-bottom: var(--l8vrn1);
  }
  ._10hafptc7 {
    margin-bottom: var(--l8vrn2);
  }
  ._10hafptcb {
    margin-bottom: var(--l8vrn3);
  }
  ._10hafptcf {
    margin-bottom: var(--l8vrn4);
  }
  ._10hafptcj {
    margin-bottom: var(--l8vrn5);
  }
  ._10hafptcn {
    margin-bottom: var(--l8vrn6);
  }
  ._10hafptcr {
    margin-bottom: var(--l8vrn7);
  }
  ._10hafptcv {
    margin-bottom: var(--l8vrn8);
  }
  ._10hafptcz {
    margin-bottom: 0;
  }
  ._10hafptd3 {
    margin-right: var(--l8vrn0);
  }
  ._10hafptd7 {
    margin-right: var(--l8vrn1);
  }
  ._10hafptdb {
    margin-right: var(--l8vrn2);
  }
  ._10hafptdf {
    margin-right: var(--l8vrn3);
  }
  ._10hafptdj {
    margin-right: var(--l8vrn4);
  }
  ._10hafptdn {
    margin-right: var(--l8vrn5);
  }
  ._10hafptdr {
    margin-right: var(--l8vrn6);
  }
  ._10hafptdv {
    margin-right: var(--l8vrn7);
  }
  ._10hafptdz {
    margin-right: var(--l8vrn8);
  }
  ._10hafpte3 {
    margin-right: 0;
  }
  ._10hafpte7 {
    margin-left: var(--l8vrn0);
  }
  ._10hafpteb {
    margin-left: var(--l8vrn1);
  }
  ._10hafptef {
    margin-left: var(--l8vrn2);
  }
  ._10hafptej {
    margin-left: var(--l8vrn3);
  }
  ._10hafpten {
    margin-left: var(--l8vrn4);
  }
  ._10hafpter {
    margin-left: var(--l8vrn5);
  }
  ._10hafptev {
    margin-left: var(--l8vrn6);
  }
  ._10hafptez {
    margin-left: var(--l8vrn7);
  }
  ._10hafptf3 {
    margin-left: var(--l8vrn8);
  }
  ._10hafptf7 {
    margin-left: 0;
  }
  ._10hafptfb {
    align-items: flex-start;
  }
  ._10hafptff {
    align-items: center;
  }
  ._10hafptfj {
    align-items: flex-end;
  }
  ._10hafptfn {
    justify-content: flex-start;
  }
  ._10hafptfr {
    justify-content: center;
  }
  ._10hafptfv {
    justify-content: flex-end;
  }
  ._10hafptfz {
    justify-content: space-between;
  }
  ._10hafptg3 {
    flex-direction: row;
  }
  ._10hafptg7 {
    flex-direction: row-reverse;
  }
  ._10hafptgb {
    flex-direction: column;
  }
  ._10hafptgf {
    flex-direction: column-reverse;
  }
  ._10hafptgj {
    flex-wrap: wrap;
  }
  ._10hafptgn {
    flex-wrap: nowrap;
  }
  ._10hafptgr {
    flex-shrink: 0;
  }
  ._10hafptgv {
    flex-grow: 0;
  }
  ._10hafptgz {
    flex-grow: 1;
  }
  ._10hafpth3 {
    text-align: left;
  }
  ._10hafpth7 {
    text-align: center;
  }
  ._10hafpthb {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._10hafpt4w {
    display: none;
  }
  ._10hafpt50 {
    display: block;
  }
  ._10hafpt54 {
    display: inline;
  }
  ._10hafpt58 {
    display: inline-block;
  }
  ._10hafpt5c {
    display: flex;
  }
  ._10hafpt5g {
    position: relative;
  }
  ._10hafpt5k {
    position: absolute;
  }
  ._10hafpt5o {
    position: fixed;
  }
  ._10hafpt5s {
    border-radius: 0;
  }
  ._10hafpt5w {
    border-radius: 9999px;
  }
  ._10hafpt60 {
    border-radius: var(--l8vrnb);
  }
  ._10hafpt64 {
    border-radius: var(--l8vrnc);
  }
  ._10hafpt68 {
    border-radius: var(--l8vrnd);
  }
  ._10hafpt6c {
    border-radius: var(--l8vrne);
  }
  ._10hafpt6g {
    padding-top: var(--l8vrn0);
  }
  ._10hafpt6k {
    padding-top: var(--l8vrn1);
  }
  ._10hafpt6o {
    padding-top: var(--l8vrn2);
  }
  ._10hafpt6s {
    padding-top: var(--l8vrn3);
  }
  ._10hafpt6w {
    padding-top: var(--l8vrn4);
  }
  ._10hafpt70 {
    padding-top: var(--l8vrn5);
  }
  ._10hafpt74 {
    padding-top: var(--l8vrn6);
  }
  ._10hafpt78 {
    padding-top: var(--l8vrn7);
  }
  ._10hafpt7c {
    padding-top: var(--l8vrn8);
  }
  ._10hafpt7g {
    padding-top: 0;
  }
  ._10hafpt7k {
    padding-bottom: var(--l8vrn0);
  }
  ._10hafpt7o {
    padding-bottom: var(--l8vrn1);
  }
  ._10hafpt7s {
    padding-bottom: var(--l8vrn2);
  }
  ._10hafpt7w {
    padding-bottom: var(--l8vrn3);
  }
  ._10hafpt80 {
    padding-bottom: var(--l8vrn4);
  }
  ._10hafpt84 {
    padding-bottom: var(--l8vrn5);
  }
  ._10hafpt88 {
    padding-bottom: var(--l8vrn6);
  }
  ._10hafpt8c {
    padding-bottom: var(--l8vrn7);
  }
  ._10hafpt8g {
    padding-bottom: var(--l8vrn8);
  }
  ._10hafpt8k {
    padding-bottom: 0;
  }
  ._10hafpt8o {
    padding-right: var(--l8vrn0);
  }
  ._10hafpt8s {
    padding-right: var(--l8vrn1);
  }
  ._10hafpt8w {
    padding-right: var(--l8vrn2);
  }
  ._10hafpt90 {
    padding-right: var(--l8vrn3);
  }
  ._10hafpt94 {
    padding-right: var(--l8vrn4);
  }
  ._10hafpt98 {
    padding-right: var(--l8vrn5);
  }
  ._10hafpt9c {
    padding-right: var(--l8vrn6);
  }
  ._10hafpt9g {
    padding-right: var(--l8vrn7);
  }
  ._10hafpt9k {
    padding-right: var(--l8vrn8);
  }
  ._10hafpt9o {
    padding-right: 0;
  }
  ._10hafpt9s {
    padding-left: var(--l8vrn0);
  }
  ._10hafpt9w {
    padding-left: var(--l8vrn1);
  }
  ._10hafpta0 {
    padding-left: var(--l8vrn2);
  }
  ._10hafpta4 {
    padding-left: var(--l8vrn3);
  }
  ._10hafpta8 {
    padding-left: var(--l8vrn4);
  }
  ._10hafptac {
    padding-left: var(--l8vrn5);
  }
  ._10hafptag {
    padding-left: var(--l8vrn6);
  }
  ._10hafptak {
    padding-left: var(--l8vrn7);
  }
  ._10hafptao {
    padding-left: var(--l8vrn8);
  }
  ._10hafptas {
    padding-left: 0;
  }
  ._10hafptaw {
    margin-top: var(--l8vrn0);
  }
  ._10hafptb0 {
    margin-top: var(--l8vrn1);
  }
  ._10hafptb4 {
    margin-top: var(--l8vrn2);
  }
  ._10hafptb8 {
    margin-top: var(--l8vrn3);
  }
  ._10hafptbc {
    margin-top: var(--l8vrn4);
  }
  ._10hafptbg {
    margin-top: var(--l8vrn5);
  }
  ._10hafptbk {
    margin-top: var(--l8vrn6);
  }
  ._10hafptbo {
    margin-top: var(--l8vrn7);
  }
  ._10hafptbs {
    margin-top: var(--l8vrn8);
  }
  ._10hafptbw {
    margin-top: 0;
  }
  ._10hafptc0 {
    margin-bottom: var(--l8vrn0);
  }
  ._10hafptc4 {
    margin-bottom: var(--l8vrn1);
  }
  ._10hafptc8 {
    margin-bottom: var(--l8vrn2);
  }
  ._10hafptcc {
    margin-bottom: var(--l8vrn3);
  }
  ._10hafptcg {
    margin-bottom: var(--l8vrn4);
  }
  ._10hafptck {
    margin-bottom: var(--l8vrn5);
  }
  ._10hafptco {
    margin-bottom: var(--l8vrn6);
  }
  ._10hafptcs {
    margin-bottom: var(--l8vrn7);
  }
  ._10hafptcw {
    margin-bottom: var(--l8vrn8);
  }
  ._10hafptd0 {
    margin-bottom: 0;
  }
  ._10hafptd4 {
    margin-right: var(--l8vrn0);
  }
  ._10hafptd8 {
    margin-right: var(--l8vrn1);
  }
  ._10hafptdc {
    margin-right: var(--l8vrn2);
  }
  ._10hafptdg {
    margin-right: var(--l8vrn3);
  }
  ._10hafptdk {
    margin-right: var(--l8vrn4);
  }
  ._10hafptdo {
    margin-right: var(--l8vrn5);
  }
  ._10hafptds {
    margin-right: var(--l8vrn6);
  }
  ._10hafptdw {
    margin-right: var(--l8vrn7);
  }
  ._10hafpte0 {
    margin-right: var(--l8vrn8);
  }
  ._10hafpte4 {
    margin-right: 0;
  }
  ._10hafpte8 {
    margin-left: var(--l8vrn0);
  }
  ._10hafptec {
    margin-left: var(--l8vrn1);
  }
  ._10hafpteg {
    margin-left: var(--l8vrn2);
  }
  ._10hafptek {
    margin-left: var(--l8vrn3);
  }
  ._10hafpteo {
    margin-left: var(--l8vrn4);
  }
  ._10hafptes {
    margin-left: var(--l8vrn5);
  }
  ._10hafptew {
    margin-left: var(--l8vrn6);
  }
  ._10hafptf0 {
    margin-left: var(--l8vrn7);
  }
  ._10hafptf4 {
    margin-left: var(--l8vrn8);
  }
  ._10hafptf8 {
    margin-left: 0;
  }
  ._10hafptfc {
    align-items: flex-start;
  }
  ._10hafptfg {
    align-items: center;
  }
  ._10hafptfk {
    align-items: flex-end;
  }
  ._10hafptfo {
    justify-content: flex-start;
  }
  ._10hafptfs {
    justify-content: center;
  }
  ._10hafptfw {
    justify-content: flex-end;
  }
  ._10hafptg0 {
    justify-content: space-between;
  }
  ._10hafptg4 {
    flex-direction: row;
  }
  ._10hafptg8 {
    flex-direction: row-reverse;
  }
  ._10hafptgc {
    flex-direction: column;
  }
  ._10hafptgg {
    flex-direction: column-reverse;
  }
  ._10hafptgk {
    flex-wrap: wrap;
  }
  ._10hafptgo {
    flex-wrap: nowrap;
  }
  ._10hafptgs {
    flex-shrink: 0;
  }
  ._10hafptgw {
    flex-grow: 0;
  }
  ._10hafpth0 {
    flex-grow: 1;
  }
  ._10hafpth4 {
    text-align: left;
  }
  ._10hafpth8 {
    text-align: center;
  }
  ._10hafpthc {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._10hafpt4x {
    display: none;
  }
  ._10hafpt51 {
    display: block;
  }
  ._10hafpt55 {
    display: inline;
  }
  ._10hafpt59 {
    display: inline-block;
  }
  ._10hafpt5d {
    display: flex;
  }
  ._10hafpt5h {
    position: relative;
  }
  ._10hafpt5l {
    position: absolute;
  }
  ._10hafpt5p {
    position: fixed;
  }
  ._10hafpt5t {
    border-radius: 0;
  }
  ._10hafpt5x {
    border-radius: 9999px;
  }
  ._10hafpt61 {
    border-radius: var(--l8vrnb);
  }
  ._10hafpt65 {
    border-radius: var(--l8vrnc);
  }
  ._10hafpt69 {
    border-radius: var(--l8vrnd);
  }
  ._10hafpt6d {
    border-radius: var(--l8vrne);
  }
  ._10hafpt6h {
    padding-top: var(--l8vrn0);
  }
  ._10hafpt6l {
    padding-top: var(--l8vrn1);
  }
  ._10hafpt6p {
    padding-top: var(--l8vrn2);
  }
  ._10hafpt6t {
    padding-top: var(--l8vrn3);
  }
  ._10hafpt6x {
    padding-top: var(--l8vrn4);
  }
  ._10hafpt71 {
    padding-top: var(--l8vrn5);
  }
  ._10hafpt75 {
    padding-top: var(--l8vrn6);
  }
  ._10hafpt79 {
    padding-top: var(--l8vrn7);
  }
  ._10hafpt7d {
    padding-top: var(--l8vrn8);
  }
  ._10hafpt7h {
    padding-top: 0;
  }
  ._10hafpt7l {
    padding-bottom: var(--l8vrn0);
  }
  ._10hafpt7p {
    padding-bottom: var(--l8vrn1);
  }
  ._10hafpt7t {
    padding-bottom: var(--l8vrn2);
  }
  ._10hafpt7x {
    padding-bottom: var(--l8vrn3);
  }
  ._10hafpt81 {
    padding-bottom: var(--l8vrn4);
  }
  ._10hafpt85 {
    padding-bottom: var(--l8vrn5);
  }
  ._10hafpt89 {
    padding-bottom: var(--l8vrn6);
  }
  ._10hafpt8d {
    padding-bottom: var(--l8vrn7);
  }
  ._10hafpt8h {
    padding-bottom: var(--l8vrn8);
  }
  ._10hafpt8l {
    padding-bottom: 0;
  }
  ._10hafpt8p {
    padding-right: var(--l8vrn0);
  }
  ._10hafpt8t {
    padding-right: var(--l8vrn1);
  }
  ._10hafpt8x {
    padding-right: var(--l8vrn2);
  }
  ._10hafpt91 {
    padding-right: var(--l8vrn3);
  }
  ._10hafpt95 {
    padding-right: var(--l8vrn4);
  }
  ._10hafpt99 {
    padding-right: var(--l8vrn5);
  }
  ._10hafpt9d {
    padding-right: var(--l8vrn6);
  }
  ._10hafpt9h {
    padding-right: var(--l8vrn7);
  }
  ._10hafpt9l {
    padding-right: var(--l8vrn8);
  }
  ._10hafpt9p {
    padding-right: 0;
  }
  ._10hafpt9t {
    padding-left: var(--l8vrn0);
  }
  ._10hafpt9x {
    padding-left: var(--l8vrn1);
  }
  ._10hafpta1 {
    padding-left: var(--l8vrn2);
  }
  ._10hafpta5 {
    padding-left: var(--l8vrn3);
  }
  ._10hafpta9 {
    padding-left: var(--l8vrn4);
  }
  ._10hafptad {
    padding-left: var(--l8vrn5);
  }
  ._10hafptah {
    padding-left: var(--l8vrn6);
  }
  ._10hafptal {
    padding-left: var(--l8vrn7);
  }
  ._10hafptap {
    padding-left: var(--l8vrn8);
  }
  ._10hafptat {
    padding-left: 0;
  }
  ._10hafptax {
    margin-top: var(--l8vrn0);
  }
  ._10hafptb1 {
    margin-top: var(--l8vrn1);
  }
  ._10hafptb5 {
    margin-top: var(--l8vrn2);
  }
  ._10hafptb9 {
    margin-top: var(--l8vrn3);
  }
  ._10hafptbd {
    margin-top: var(--l8vrn4);
  }
  ._10hafptbh {
    margin-top: var(--l8vrn5);
  }
  ._10hafptbl {
    margin-top: var(--l8vrn6);
  }
  ._10hafptbp {
    margin-top: var(--l8vrn7);
  }
  ._10hafptbt {
    margin-top: var(--l8vrn8);
  }
  ._10hafptbx {
    margin-top: 0;
  }
  ._10hafptc1 {
    margin-bottom: var(--l8vrn0);
  }
  ._10hafptc5 {
    margin-bottom: var(--l8vrn1);
  }
  ._10hafptc9 {
    margin-bottom: var(--l8vrn2);
  }
  ._10hafptcd {
    margin-bottom: var(--l8vrn3);
  }
  ._10hafptch {
    margin-bottom: var(--l8vrn4);
  }
  ._10hafptcl {
    margin-bottom: var(--l8vrn5);
  }
  ._10hafptcp {
    margin-bottom: var(--l8vrn6);
  }
  ._10hafptct {
    margin-bottom: var(--l8vrn7);
  }
  ._10hafptcx {
    margin-bottom: var(--l8vrn8);
  }
  ._10hafptd1 {
    margin-bottom: 0;
  }
  ._10hafptd5 {
    margin-right: var(--l8vrn0);
  }
  ._10hafptd9 {
    margin-right: var(--l8vrn1);
  }
  ._10hafptdd {
    margin-right: var(--l8vrn2);
  }
  ._10hafptdh {
    margin-right: var(--l8vrn3);
  }
  ._10hafptdl {
    margin-right: var(--l8vrn4);
  }
  ._10hafptdp {
    margin-right: var(--l8vrn5);
  }
  ._10hafptdt {
    margin-right: var(--l8vrn6);
  }
  ._10hafptdx {
    margin-right: var(--l8vrn7);
  }
  ._10hafpte1 {
    margin-right: var(--l8vrn8);
  }
  ._10hafpte5 {
    margin-right: 0;
  }
  ._10hafpte9 {
    margin-left: var(--l8vrn0);
  }
  ._10hafpted {
    margin-left: var(--l8vrn1);
  }
  ._10hafpteh {
    margin-left: var(--l8vrn2);
  }
  ._10hafptel {
    margin-left: var(--l8vrn3);
  }
  ._10hafptep {
    margin-left: var(--l8vrn4);
  }
  ._10hafptet {
    margin-left: var(--l8vrn5);
  }
  ._10hafptex {
    margin-left: var(--l8vrn6);
  }
  ._10hafptf1 {
    margin-left: var(--l8vrn7);
  }
  ._10hafptf5 {
    margin-left: var(--l8vrn8);
  }
  ._10hafptf9 {
    margin-left: 0;
  }
  ._10hafptfd {
    align-items: flex-start;
  }
  ._10hafptfh {
    align-items: center;
  }
  ._10hafptfl {
    align-items: flex-end;
  }
  ._10hafptfp {
    justify-content: flex-start;
  }
  ._10hafptft {
    justify-content: center;
  }
  ._10hafptfx {
    justify-content: flex-end;
  }
  ._10hafptg1 {
    justify-content: space-between;
  }
  ._10hafptg5 {
    flex-direction: row;
  }
  ._10hafptg9 {
    flex-direction: row-reverse;
  }
  ._10hafptgd {
    flex-direction: column;
  }
  ._10hafptgh {
    flex-direction: column-reverse;
  }
  ._10hafptgl {
    flex-wrap: wrap;
  }
  ._10hafptgp {
    flex-wrap: nowrap;
  }
  ._10hafptgt {
    flex-shrink: 0;
  }
  ._10hafptgx {
    flex-grow: 0;
  }
  ._10hafpth1 {
    flex-grow: 1;
  }
  ._10hafpth5 {
    text-align: left;
  }
  ._10hafpth9 {
    text-align: center;
  }
  ._10hafpthd {
    text-align: right;
  }
}
._10l7dzo4 {
  font-size: var(--_10l7dzo0);
  line-height: var(--_10l7dzo1);
}
._10l7dzo4:before {
  content: "";
  display: table;
  margin-bottom: var(--_10l7dzo2);
}
._10l7dzo4:after {
  content: "";
  display: table;
  margin-top: var(--_10l7dzo3);
}
.xwr9ww0 {
  font-family: var(--l8vrn2w);
}
.xwr9ww1 {
  font-weight: var(--l8vrn46);
}
.xwr9ww2 {
  font-weight: var(--l8vrn47);
}
.xwr9ww3 {
  font-weight: var(--l8vrn48);
}
.xwr9ww4 {
  --_10l7dzo0: var(--l8vrn32);
  --_10l7dzo1: var(--l8vrn33);
  --_10l7dzo2: var(--l8vrn35);
  --_10l7dzo3: var(--l8vrn36);
}
.xwr9ww7 {
  --_10l7dzo0: var(--l8vrn3c);
  --_10l7dzo1: var(--l8vrn3d);
  --_10l7dzo2: var(--l8vrn3f);
  --_10l7dzo3: var(--l8vrn3g);
}
.xwr9wwa {
  --_10l7dzo0: var(--l8vrn3m);
  --_10l7dzo1: var(--l8vrn3n);
  --_10l7dzo2: var(--l8vrn3p);
  --_10l7dzo3: var(--l8vrn3q);
}
.xwr9wwd {
  --_10l7dzo0: var(--l8vrn3w);
  --_10l7dzo1: var(--l8vrn3x);
  --_10l7dzo2: var(--l8vrn3z);
  --_10l7dzo3: var(--l8vrn40);
}
.xwr9wwg {
  font-size: var(--l8vrn32);
  line-height: var(--l8vrn33);
}
.xwr9wwh {
  font-size: var(--l8vrn3c);
  line-height: var(--l8vrn3d);
}
.xwr9wwi {
  font-size: var(--l8vrn3m);
  line-height: var(--l8vrn3n);
}
.xwr9wwj {
  font-size: var(--l8vrn3w);
  line-height: var(--l8vrn3x);
}
.xwr9wwk {
  font-weight: var(--l8vrn5d);
}
.xwr9wwl {
  font-weight: var(--l8vrn5e);
}
.xwr9wwm {
  --_10l7dzo0: var(--l8vrn49);
  --_10l7dzo1: var(--l8vrn4a);
  --_10l7dzo2: var(--l8vrn4c);
  --_10l7dzo3: var(--l8vrn4d);
}
.xwr9wwp {
  --_10l7dzo0: var(--l8vrn4j);
  --_10l7dzo1: var(--l8vrn4k);
  --_10l7dzo2: var(--l8vrn4m);
  --_10l7dzo3: var(--l8vrn4n);
}
.xwr9wws {
  --_10l7dzo0: var(--l8vrn4t);
  --_10l7dzo1: var(--l8vrn4u);
  --_10l7dzo2: var(--l8vrn4w);
  --_10l7dzo3: var(--l8vrn4x);
}
.xwr9wwv {
  --_10l7dzo0: var(--l8vrn53);
  --_10l7dzo1: var(--l8vrn54);
  --_10l7dzo2: var(--l8vrn56);
  --_10l7dzo3: var(--l8vrn57);
}
html:not(._10hafptz) .xwr9ww18 {
  --xwr9wwy: var(--l8vrn19);
  --xwr9wwz: var(--l8vrn17);
  --xwr9ww10: var(--l8vrn1d);
  --xwr9ww11: var(--l8vrn1o);
  --xwr9ww12: var(--l8vrn1m);
  --xwr9ww13: var(--l8vrn15);
  --xwr9ww14: var(--l8vrn1b);
  --xwr9ww15: var(--l8vrn1k);
  --xwr9ww16: var(--l8vrn1r);
  --xwr9ww17: var(--l8vrn1f);
}
html:not(._10hafptz) .xwr9ww19 {
  --xwr9wwy: var(--l8vrn1a);
  --xwr9wwz: var(--l8vrn18);
  --xwr9ww10: var(--l8vrn1e);
  --xwr9ww11: var(--l8vrn1p);
  --xwr9ww12: var(--l8vrn1n);
  --xwr9ww13: var(--l8vrn16);
  --xwr9ww14: var(--l8vrn1c);
  --xwr9ww15: var(--l8vrn1l);
  --xwr9ww16: var(--l8vrn1s);
  --xwr9ww17: var(--l8vrn1h);
}
html._10hafptz .xwr9ww1a {
  --xwr9wwy: var(--l8vrn19);
  --xwr9wwz: var(--l8vrn17);
  --xwr9ww10: var(--l8vrn1d);
  --xwr9ww11: var(--l8vrn1o);
  --xwr9ww12: var(--l8vrn1m);
  --xwr9ww13: var(--l8vrn15);
  --xwr9ww14: var(--l8vrn1b);
  --xwr9ww15: var(--l8vrn1k);
  --xwr9ww16: var(--l8vrn1r);
  --xwr9ww17: var(--l8vrn1f);
}
html._10hafptz .xwr9ww1b {
  --xwr9wwy: var(--l8vrn1a);
  --xwr9wwz: var(--l8vrn18);
  --xwr9ww10: var(--l8vrn1e);
  --xwr9ww11: var(--l8vrn1p);
  --xwr9ww12: var(--l8vrn1n);
  --xwr9ww13: var(--l8vrn16);
  --xwr9ww14: var(--l8vrn1c);
  --xwr9ww15: var(--l8vrn1l);
  --xwr9ww16: var(--l8vrn1s);
  --xwr9ww17: var(--l8vrn1h);
}
html:not(._10hafptz) .xwr9ww1c,
html:not(._10hafptz) .xwr9ww1d,
html:not(._10hafptz) .xwr9ww1e,
html:not(._10hafptz) .xwr9ww1f {
  --xwr9ww15: var(--xwr9wwy);
}
html:not(._10hafptz) .xwr9ww1g,
html:not(._10hafptz) .xwr9ww1h {
  --xwr9ww15: var(--xwr9wwz);
}
html:not(._10hafptz) .xwr9ww1i {
  --xwr9ww15: var(--xwr9ww12);
}
html:not(._10hafptz) .xwr9ww1j {
  --xwr9ww15: var(--xwr9ww10);
}
html:not(._10hafptz) .xwr9ww1k {
  --xwr9ww15: var(--xwr9ww11);
}
html._10hafptz .xwr9ww1l,
html._10hafptz .xwr9ww1m,
html._10hafptz .xwr9ww1n,
html._10hafptz .xwr9ww1o {
  --xwr9ww15: var(--xwr9wwy);
}
html._10hafptz .xwr9ww1p,
html._10hafptz .xwr9ww1q {
  --xwr9ww15: var(--xwr9wwz);
}
html._10hafptz .xwr9ww1r {
  --xwr9ww15: var(--xwr9ww12);
}
html._10hafptz .xwr9ww1s {
  --xwr9ww15: var(--xwr9ww10);
}
html._10hafptz .xwr9ww1t {
  --xwr9ww15: var(--xwr9ww11);
}
.xwr9ww1u {
  color: var(--xwr9wwy);
}
.xwr9ww1v {
  color: var(--xwr9wwz);
}
.xwr9ww1w {
  color: var(--xwr9ww10);
}
.xwr9ww1x {
  color: var(--xwr9ww11);
}
.xwr9ww1y {
  color: var(--xwr9ww12);
}
.xwr9ww1z {
  color: var(--xwr9ww13);
}
.xwr9ww20 {
  color: var(--xwr9ww14);
}
.xwr9ww21 {
  color: var(--xwr9ww15);
}
.xwr9ww22 {
  color: var(--xwr9ww16);
}
.xwr9ww23 {
  color: var(--xwr9ww17);
}
.xwr9ww24 {
  padding-bottom: calc((var(--l8vrn9) - var(--l8vrn33)) / 2);
  padding-top: calc((var(--l8vrn9) - var(--l8vrn33)) / 2);
}
.xwr9ww25 {
  padding-bottom: calc((var(--l8vrn9) - var(--l8vrn3d)) / 2);
  padding-top: calc((var(--l8vrn9) - var(--l8vrn3d)) / 2);
}
.xwr9ww26 {
  padding-bottom: calc((var(--l8vrn9) - var(--l8vrn3n)) / 2);
  padding-top: calc((var(--l8vrn9) - var(--l8vrn3n)) / 2);
}
.xwr9ww27 {
  padding-bottom: calc((var(--l8vrn9) - var(--l8vrn3x)) / 2);
  padding-top: calc((var(--l8vrn9) - var(--l8vrn3x)) / 2);
}
@media screen and (min-width: 740px) {
  .xwr9ww4 {
    --_10l7dzo0: var(--l8vrn37);
    --_10l7dzo1: var(--l8vrn38);
    --_10l7dzo2: var(--l8vrn3a);
    --_10l7dzo3: var(--l8vrn3b);
  }
  .xwr9ww7 {
    --_10l7dzo0: var(--l8vrn3h);
    --_10l7dzo1: var(--l8vrn3i);
    --_10l7dzo2: var(--l8vrn3k);
    --_10l7dzo3: var(--l8vrn3l);
  }
  .xwr9wwa {
    --_10l7dzo0: var(--l8vrn3r);
    --_10l7dzo1: var(--l8vrn3s);
    --_10l7dzo2: var(--l8vrn3u);
    --_10l7dzo3: var(--l8vrn3v);
  }
  .xwr9wwd {
    --_10l7dzo0: var(--l8vrn41);
    --_10l7dzo1: var(--l8vrn42);
    --_10l7dzo2: var(--l8vrn44);
    --_10l7dzo3: var(--l8vrn45);
  }
  .xwr9wwg {
    font-size: var(--l8vrn37);
    line-height: var(--l8vrn38);
  }
  .xwr9wwh {
    font-size: var(--l8vrn3h);
    line-height: var(--l8vrn3i);
  }
  .xwr9wwi {
    font-size: var(--l8vrn3r);
    line-height: var(--l8vrn3s);
  }
  .xwr9wwj {
    font-size: var(--l8vrn41);
    line-height: var(--l8vrn42);
  }
  .xwr9wwm {
    --_10l7dzo0: var(--l8vrn4e);
    --_10l7dzo1: var(--l8vrn4f);
    --_10l7dzo2: var(--l8vrn4h);
    --_10l7dzo3: var(--l8vrn4i);
  }
  .xwr9wwp {
    --_10l7dzo0: var(--l8vrn4o);
    --_10l7dzo1: var(--l8vrn4p);
    --_10l7dzo2: var(--l8vrn4r);
    --_10l7dzo3: var(--l8vrn4s);
  }
  .xwr9wws {
    --_10l7dzo0: var(--l8vrn4y);
    --_10l7dzo1: var(--l8vrn4z);
    --_10l7dzo2: var(--l8vrn51);
    --_10l7dzo3: var(--l8vrn52);
  }
  .xwr9wwv {
    --_10l7dzo0: var(--l8vrn58);
    --_10l7dzo1: var(--l8vrn59);
    --_10l7dzo2: var(--l8vrn5b);
    --_10l7dzo3: var(--l8vrn5c);
  }
  .xwr9ww24 {
    padding-bottom: calc((var(--l8vrn9) - var(--l8vrn38)) / 2);
    padding-top: calc((var(--l8vrn9) - var(--l8vrn38)) / 2);
  }
  .xwr9ww25 {
    padding-bottom: calc((var(--l8vrn9) - var(--l8vrn3i)) / 2);
    padding-top: calc((var(--l8vrn9) - var(--l8vrn3i)) / 2);
  }
  .xwr9ww26 {
    padding-bottom: calc((var(--l8vrn9) - var(--l8vrn3s)) / 2);
    padding-top: calc((var(--l8vrn9) - var(--l8vrn3s)) / 2);
  }
  .xwr9ww27 {
    padding-bottom: calc((var(--l8vrn9) - var(--l8vrn42)) / 2);
    padding-top: calc((var(--l8vrn9) - var(--l8vrn42)) / 2);
  }
}
.fvj5u10 {
  --l8vrn0: 24px;
  --l8vrn1: 4px;
  --l8vrn2: 8px;
  --l8vrn3: 12px;
  --l8vrn4: 20px;
  --l8vrn5: 32px;
  --l8vrn6: 48px;
  --l8vrn7: 96px;
  --l8vrn8: 120px;
  --l8vrn9: 44px;
  --l8vrna: 4px;
  --l8vrnb: 2px;
  --l8vrnc: 4px;
  --l8vrnd: 6px;
  --l8vrne: 10px;
  --l8vrnf: #e60278;
  --l8vrng: #f8b1dc;
  --l8vrnh: #fdc221;
  --l8vrni: #fee384;
  --l8vrnj: #b91e1e;
  --l8vrnk: #fb999a;
  --l8vrnl: #838fa5;
  --l8vrnm: rgba(159, 176, 245, 0.7);
  --l8vrnn: #4964e9;
  --l8vrno: #9fb0f5;
  --l8vrnp: #1d559d;
  --l8vrnq: #98c9f1;
  --l8vrnr: #2e3849;
  --l8vrnt: #d2d7df;
  --l8vrns: #fff;
  --l8vrnu: #12784f;
  --l8vrnv: #8bdec5;
  --l8vrnw: #512eaa;
  --l8vrnx: #c6acf5;
  --l8vrny: 1px;
  --l8vrnz: 2px;
  --l8vrn10: 3px;
  --l8vrn11: 400px;
  --l8vrn12: 660px;
  --l8vrn13: 940px;
  --l8vrn14: 1280px;
  --l8vrn15: #e60278;
  --l8vrn16: #f8b1dc;
  --l8vrn17: #723d02;
  --l8vrn18: #fee384;
  --l8vrn19: #b91e1e;
  --l8vrn1a: #fb999a;
  --l8vrn1b: #4964e9;
  --l8vrn1c: #9fb0f5;
  --l8vrn1d: #1d559d;
  --l8vrn1e: #98c9f1;
  --l8vrn1f: #4964e9;
  --l8vrn1h: #9fb0f5;
  --l8vrn1g: #4964e9;
  --l8vrn1i: #512eaa;
  --l8vrn1j: #c6acf5;
  --l8vrn1k: #2e3849;
  --l8vrn1l: #fff;
  --l8vrn1m: #12784f;
  --l8vrn1n: #8bdec5;
  --l8vrn1o: #512eaa;
  --l8vrn1p: #c6acf5;
  --l8vrn1q: #f57c00;
  --l8vrn1r: #5a6881;
  --l8vrn1s: hsla(0, 0%, 100%, 0.65);
  --l8vrn1t: #f7f8fb;
  --l8vrn1u: #0e131b;
  --l8vrn1v: #0d3880;
  --l8vrn1w: #e60278;
  --l8vrn1x: #cd026b;
  --l8vrn1y: #fd0585;
  --l8vrn1z: #feeffa;
  --l8vrn20: #fdd7f3;
  --l8vrn21: #fde3f6;
  --l8vrn22: #fdc221;
  --l8vrn23: #fef8de;
  --l8vrn24: #b91e1e;
  --l8vrn25: #a31a1a;
  --l8vrn26: #db1616;
  --l8vrn27: #ffe3e2;
  --l8vrn28: #fef3f3;
  --l8vrn29: #fcdbdb;
  --l8vrn2a: #fde7e7;
  --l8vrn2b: #4964e9;
  --l8vrn2c: #3251e6;
  --l8vrn2d: #5975ff;
  --l8vrn2e: #f4f6fe;
  --l8vrn2f: #dde3fc;
  --l8vrn2g: #e8ecfd;
  --l8vrn2h: #1d559d;
  --l8vrn2i: #e3f2fb;
  --l8vrn2j: #2e3849;
  --l8vrn2k: #242c39;
  --l8vrn2l: #384459;
  --l8vrn2m: #eaecf1;
  --l8vrn2n: #f7f8fb;
  --l8vrn2o: #e6e9f3;
  --l8vrn2p: #eff1f7;
  --l8vrn2q: #12784f;
  --l8vrn2r: #e2f7f1;
  --l8vrn2s: #512eaa;
  --l8vrn2t: #f1e8fd;
  --l8vrn2u: #fff;
  --l8vrn2v: #1c2330;
  --l8vrn2w: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --l8vrn2x: 1456;
  --l8vrn2y: 1900;
  --l8vrn2z: -500;
  --l8vrn30: 0;
  --l8vrn31: 2048;
  --l8vrn32: 12px;
  --l8vrn33: 20px;
  --l8vrn34: 8.5313px;
  --l8vrn35: -0.4642em;
  --l8vrn36: -0.4915em;
  --l8vrn37: 12px;
  --l8vrn38: 20px;
  --l8vrn39: 8.5313px;
  --l8vrn3a: -0.4642em;
  --l8vrn3b: -0.4915em;
  --l8vrn3c: 14px;
  --l8vrn3d: 20px;
  --l8vrn3e: 9.9531px;
  --l8vrn3f: -0.3451em;
  --l8vrn3g: -0.3725em;
  --l8vrn3h: 14px;
  --l8vrn3i: 20px;
  --l8vrn3j: 9.9531px;
  --l8vrn3k: -0.3451em;
  --l8vrn3l: -0.3725em;
  --l8vrn3m: 16px;
  --l8vrn3n: 24px;
  --l8vrn3o: 11.375px;
  --l8vrn3p: -0.3809em;
  --l8vrn3q: -0.4082em;
  --l8vrn3r: 16px;
  --l8vrn3s: 24px;
  --l8vrn3t: 11.375px;
  --l8vrn3u: -0.3809em;
  --l8vrn3v: -0.4082em;
  --l8vrn3w: 18px;
  --l8vrn3x: 28px;
  --l8vrn3y: 12.7969px;
  --l8vrn3z: -0.4086em;
  --l8vrn40: -0.436em;
  --l8vrn41: 18px;
  --l8vrn42: 28px;
  --l8vrn43: 12.7969px;
  --l8vrn44: -0.4086em;
  --l8vrn45: -0.436em;
  --l8vrn46: 400;
  --l8vrn47: 600;
  --l8vrn48: 700;
  --l8vrn49: 28px;
  --l8vrn4a: 36px;
  --l8vrn4b: 19.9063px;
  --l8vrn4c: -0.2737em;
  --l8vrn4d: -0.3011em;
  --l8vrn4e: 42px;
  --l8vrn4f: 44px;
  --l8vrn4g: 29.8594px;
  --l8vrn4h: -0.1547em;
  --l8vrn4i: -0.182em;
  --l8vrn4j: 21px;
  --l8vrn4k: 32px;
  --l8vrn4l: 14.9297px;
  --l8vrn4m: -0.3928em;
  --l8vrn4n: -0.4201em;
  --l8vrn4o: 28px;
  --l8vrn4p: 36px;
  --l8vrn4q: 19.9063px;
  --l8vrn4r: -0.2737em;
  --l8vrn4s: -0.3011em;
  --l8vrn4t: 21px;
  --l8vrn4u: 28px;
  --l8vrn4v: 14.9297px;
  --l8vrn4w: -0.2975em;
  --l8vrn4x: -0.3249em;
  --l8vrn4y: 21px;
  --l8vrn4z: 28px;
  --l8vrn50: 14.9297px;
  --l8vrn51: -0.2975em;
  --l8vrn52: -0.3249em;
  --l8vrn53: 18px;
  --l8vrn54: 28px;
  --l8vrn55: 12.7969px;
  --l8vrn56: -0.4086em;
  --l8vrn57: -0.436em;
  --l8vrn58: 18px;
  --l8vrn59: 28px;
  --l8vrn5a: 12.7969px;
  --l8vrn5b: -0.4086em;
  --l8vrn5c: -0.436em;
  --l8vrn5d: 400;
  --l8vrn5e: 600;
  --l8vrn5f: none;
  --l8vrn5g: 24px;
  --l8vrn5h: 20px;
  --l8vrn5i: transform 0.125s ease, opacity 0.125s ease;
  --l8vrn5j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --l8vrn5k: scale(0.95);
  --l8vrn5l: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --l8vrn5m: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --l8vrn5n: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
._1c594hp6 {
  background: var(--_1c594hp0);
}
._1c594hp7 {
  background: var(--_1c594hp1);
}
._1c594hp8 {
  background: var(--_1c594hp2);
}
._1c594hp9 {
  background: var(--_1c594hp3);
}
._1c594hpa {
  background: var(--_1c594hp4);
}
._1c594hpb {
  background: var(--_1c594hp5);
}
html:not(._10hafptz) ._1c594hpc {
  --_1c594hp0: var(--l8vrnw);
  --_1c594hp1: var(--l8vrnp);
  --_1c594hp2: var(--l8vrnu);
  --_1c594hp3: var(--l8vrnh);
  --_1c594hp4: var(--l8vrnj);
  --_1c594hp5: var(--l8vrnn);
}
html:not(._10hafptz) ._1c594hpd {
  --_1c594hp0: var(--l8vrnx);
  --_1c594hp1: var(--l8vrnq);
  --_1c594hp2: var(--l8vrnv);
  --_1c594hp3: var(--l8vrni);
  --_1c594hp4: var(--l8vrnk);
  --_1c594hp5: var(--l8vrno);
}
html._10hafptz ._1c594hpe {
  --_1c594hp0: var(--l8vrnw);
  --_1c594hp1: var(--l8vrnp);
  --_1c594hp2: var(--l8vrnu);
  --_1c594hp3: var(--l8vrnh);
  --_1c594hp4: var(--l8vrnj);
  --_1c594hp5: var(--l8vrnn);
}
html._10hafptz ._1c594hpf {
  --_1c594hp0: var(--l8vrnx);
  --_1c594hp1: var(--l8vrnq);
  --_1c594hp2: var(--l8vrnv);
  --_1c594hp3: var(--l8vrni);
  --_1c594hp4: var(--l8vrnk);
  --_1c594hp5: var(--l8vrno);
}
._1c594hpg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._1c594hph {
  width: var(--l8vrne);
}
._1c594hpi {
  width: var(--l8vrna);
}
._1dpqsv40 {
  margin-bottom: -0.1em;
}
._1dpqsv42 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
._1dpqsv40 ._1dpqsv42 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._1dpqsv44 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--_1dpqsv43);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__10hafptz,html.sprinkles_darkMode__10hafptz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_apac__fvj5u10 typography_lightModeTone_light__xwr9ww18 typography_darkModeTone_dark__xwr9ww1b">
+        <div class="reset_base__wrk15d0 sprinkles_paddingBottom_gutter_mobile__10hafpt7i sprinkles_paddingTop_gutter_mobile__10hafpt6e sprinkles_paddingLeft_gutter_mobile__10hafpt9q sprinkles_paddingRight_gutter_mobile__10hafpt8m sprinkles_position_relative_mobile__10hafpt5e typography_lightModeTone_light__xwr9ww18 typography_darkModeTone_dark__xwr9ww1b sprinkles_background_surface_lightMode__10hafpt32 sprinkles_background_surfaceDark_darkMode__10hafpt35">
+          <span class="reset_base__wrk15d0 sprinkles_display_block_mobile__10hafpt4y typography_fontFamily__xwr9ww0 typography_fontWeight_regular__xwr9ww1 typography_tone_neutral__xwr9ww21 capsize_capsizeStyle__10l7dzo4 typography_textSize_large__xwr9wwd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
